# LambdaLessons

./: LICENSE  Readme.md  buffalo.cabal  lambdaLessons.cabal  stack.yaml
assets/: BooleanLang.x
src/: BooleanLang.hs
src/Buffalo/: Combinators.hs  Interpreter.hs  Types.hs
src/Buffalo/Interpreter/: Untyped.hs
src/Interps/: Evaluators.hs  FlattenAdd.hs  Language.hs  PushNeg.hs
src/Interps/DSer/: Lang.hs
src/LL/: Combinators.hs  Types.hs
src/LL/Interpreter/: Untyped.hs
src/Typed/: HigherOrder.hs  Language.hs
