name:                lambdaLessons
version:             0.1.0.0
synopsis:            An interactive walk through programming language construction
description:         Please see README.md
homepage:            https://github.com/ChrisCoffey/LambdaLessons#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Coffey
maintainer:          cmcof273@gmail.com
copyright:           2016 Chris Coffey
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LL.Types
                     , LL.Interpreter.Untyped
                     , LL.Combinators
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , containers
                     , array
  default-language:    Haskell2010

executable lambdaLessons-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambdaLessons
  default-language:    Haskell2010

test-suite lambdaLessons-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , buffalo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisCoffey/lambdaLessons
